--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ body {
   
   .hero p {
     font-size: 20px;
-    text-align: left;
+    text-align: center;
     padding-bottom: 39px;
   }
   
